# hanspaulka-stats

./: .gitignore  CLAUDE.md  PLAN.md  README.md  backfill.sh  pyproject.toml
.github/workflows/: scrape.yml
analysis/: stats.py
scraper/: fetch.py  parse.py  run.py  store.py
sitegen/: build.py
sitegen/templates/: app.js  base.html  group.html  home.js  index.html  records.html  season.html  season_records.html  sort.js  srovnani.html  srovnani.js  style.css  tabs.js  team.html
tests/: test_discovery.py  test_fetch.py  test_parse.py  test_sitegen.py  test_stats.py  test_store.py
tests/fixtures/: README.md  group_2025-podzim_6-a.html  piskani_2025-podzim_6-a.html  results_2025-podzim_6-a_round-11.json  results_2025-podzim_6-a_round-4.json  season_index_2025-podzim.html
