[project]
name = "hanspaulka-stats"
version = "0.1.0"
description = "Statistics site for Hanspaulska liga (psmf.cz scraper + static site generator)"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["scraper", "analysis", "sitegen"]

[tool.pytest.ini_options]
testpaths = ["tests"]
